feat : 프론트 - 백엔드 서버 연동 전 준비 (#86)